--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/jiangfengming/rollup-plugin-import-meta-url-to-module#readme",
   "dependencies": {
-    "@rollup/pluginutils": "^4.1.0"
+    "@rollup/pluginutils": "^4.1.0",
+    "magic-string": "^0.25.7"
   }
 }
